--- a/style/style_contacts.css
+++ b/style/style_contacts.css
@@ -317,8 +317,13 @@ table {
 }
 
 
-.container-contacts .info .map iframe {
-    box-shadow: 0px 0px 14px 12px rgba(34, 60, 80, 0.2);
+.container-contacts .info .map {
+    /* box-shadow: 0px 0px 14px 6px rgba(34, 60, 80, 0.2); */
+    padding-bottom: -21px;
+}
+
+.map-widget-panorama-player-app__copyrights {
+    display: none;
 }
 
 .container-contacts .rules {
